--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <title>{{ site.title }}</title>
     <link rel="stylesheet" href="{{ 'assets/css/style.css' | relative_url }}">
     <link rel="shortcut icon" href="{{ 'favicon.ico' | relative_url }}" type="image/x-icon">
-    <meta name="author" content="Stéphane Calderoni">
+    <meta name="author" content="{{ site.author }}">
     <meta name="description" content="Game remake for ESPboy of the famous Chrome Dino.">
     <meta name="keywords" content="espboy,esp8266,programming,game,remake,retrogaming,arduino,platformio">
     <meta property="og:type" content="game">
@@ -14,9 +14,9 @@
     <meta property="og:site_name" content="m1cr0lab game for ESPboy">
     <meta property="og:description" content="Game remake for ESPboy of the famous Chrome Dino.">
     <meta property="og:image" content="{{ 'assets/images/dino.gif' | relative_url }}">
-    <meta property="article:author" content="Stéphane Calderoni">
+    <meta property="article:author" content="{{ site.author }}">
     <meta property="article:published_time" content="2022-05-24T03:30:00+0400">
-    <meta property="article:modified_time" content="2022-05-24T04:20:00+0400">
+    <meta property="article:modified_time" content="2022-05-24T16:12:00+0400">
     <script type="module" src="{{ 'assets/js/install-button.js' | relative_url }}"></script>
     <script src="{{ 'assets/js/app.js' | relative_url }}"></script>  
 </head>
