fixes author mention + modification datetime + some finishing touches

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <meta property="og:image" content="{{ 'assets/images/dino.gif' | relative_url }}">
     <meta property="article:author" content="{{ site.author }}">
     <meta property="article:published_time" content="2022-05-24T03:30:00+0400">
-    <meta property="article:modified_time" content="2022-05-24T16:12:00+0400">
+    <meta property="article:modified_time" content="{{ 'now' | date: '%Y-%m-%d' }}T{{ 'now' | date: '%H:%M:%S' }}+0400">
     <script type="module" src="{{ 'assets/js/install-button.js' | relative_url }}"></script>
     <script src="{{ 'assets/js/app.js' | relative_url }}"></script>  
 </head>
